--- a/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
@@ -6,6 +6,7 @@
      x-transition:leave-start="opacity-100"
      x-transition:leave-end="opacity-0"
      class="md:hidden fixed inset-0 z-50"
+     id="mobile-menu"
      style="display: none;">
 
     <div @click="toggleMobileMenu()" class="absolute inset-0 bg-black/50"></div>
