--- a/wp-content/themes/marchebe/templates/search/_modal.html.twig
+++ b/wp-content/themes/marchebe/templates/search/_modal.html.twig
@@ -8,7 +8,7 @@
              x-transition:leave="transition ease-in duration-200"
              x-transition:leave-start="opacity-100"
              x-transition:leave-end="opacity-0"
-             @click="closeModal()"
+             @click="closeSearchModal()"
              class="fixed inset-0 bg-black bg-opacity-60 backdrop-blur-md flex justify-center items-start z-50 p-4 pt-16 sm:pt-24">
 
             <!-- Modal Content -->
