--- a/wp-content/themes/marchebe/assets/css/tailwind.css
+++ b/wp-content/themes/marchebe/assets/css/tailwind.css
@@ -30,7 +30,7 @@
     --color-cta-light2: #5A8C96;
     --color-cta-light: #6B9CA5;
     --color-cta-brown: #7B6B5F;
-    --color-cta-dark: #487F89FF;
+    --color-cta-dark: #477e88;
     --color-grey-dark: #232222;
     --color-grey-light: #dee2e6;
     --color-grey-lighter: #ededec;
