--- a/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
@@ -4,7 +4,7 @@
     <a href="/agenda-des-manifestations/manifestation/{{ event.codeCgt }}" class="block relative">
         <img
                 src="{% if event.images|length > 0 %} {{ event.images[0] }} {% else %} 'https://pivotmedia.tourismewallonie.be/OTH-A0-00UE-0HH1/OTH-A0-00UE-0HH1.jpg' {% endif %}"
-                alt="Image for {{ event.nom|slug }}"
+                alt="{{ event.nom }}"
                 class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105"
         />
     </a>
@@ -28,7 +28,7 @@
             </a>
 
             <div class="flex items-center text-sm text-slate-600 mb-3">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" viewBox="0 0 20 20" fill="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd"
                           d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                           clip-rule="evenodd"/>
