--- a/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
@@ -1,14 +1,28 @@
 <div class="flex space-x-6">
-    <button @click="openSearchModal()" class="cursor-pointer md:inline text-gray-600 hover:text-cta-light">
-        <i class="fas fa-search"></i>
+    <button @click="openSearchModal()"
+            class="cursor-pointer md:inline text-gray-600 hover:text-cta-light"
+            aria-label="Rechercher sur le site"
+            type="button">
+        <i class="fas fa-search" aria-hidden="true"></i>
     </button>
-    <button class="hidden text-gray-600 text-xl hover:text-blue-400  transition-colors">
-        <i class="fas fa-bars"></i>
+    <button class="hidden text-gray-600 text-xl hover:text-blue-400  transition-colors"
+            aria-label="Menu"
+            type="button">
+        <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
-    <a href="https://www.facebook.com/VilledeMarcheenFamenne" class="text-xl hover:text-blue-400 transition-colors"><i
-                class="fab fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/villedemarche/" class="text-xl hover:text-blue-400 transition-colors "><i
-                class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/user/VilledeMarche" class="text-xl hover:text-blue-400 transition-colors"><i
-                class="fab fa-youtube"></i></a>
+    <a href="https://www.facebook.com/VilledeMarcheenFamenne"
+       class="text-xl hover:text-blue-400 transition-colors"
+       aria-label="Suivez-nous sur Facebook">
+        <i class="fab fa-facebook-f" aria-hidden="true"></i>
+    </a>
+    <a href="https://www.instagram.com/villedemarche/"
+       class="text-xl hover:text-blue-400 transition-colors"
+       aria-label="Suivez-nous sur Instagram">
+        <i class="fab fa-instagram" aria-hidden="true"></i>
+    </a>
+    <a href="https://www.youtube.com/user/VilledeMarche"
+       class="text-xl hover:text-blue-400 transition-colors"
+       aria-label="Suivez-nous sur YouTube">
+        <i class="fab fa-youtube" aria-hidden="true"></i>
+    </a>
 </div>
