--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -67,11 +67,17 @@
     },
     menuData: {{ menu_data }}
     }">
+    <!-- Skip to main content link for accessibility -->
+    <a href="#main-content" class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 focus:z-50 focus:bg-blue-600 focus:text-white focus:p-4 focus:m-2 focus:rounded">
+        Aller au contenu principal
+    </a>
+
     <header class="bg-white shadow-md relative z-40" id="main-header">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 <a href="/" class="">
-                    <img src="{{ template_directory }}/assets/images/img_logo.png" alt="logo"
+                    <img src="{{ template_directory }}/assets/images/img_logo.png"
+                         alt="Ville de Marche-en-Famenne"
                          class="h-10 w-16 xl:h-14 xl:w-24"/>
                 </a>
 
@@ -85,7 +91,7 @@
                             :aria-expanded="isDesktopMenuOpen"
                             aria-controls="desktop-menu"
                     >
-                        <i class="fas fa-bars"></i> <span>Vivre à Marche</span>
+                        <i class="fas fa-bars" aria-hidden="true"></i> <span>Vivre à Marche</span>
                     </button>
                     {% include '@AcMarche/navigation/_shortcuts.html.twig' %}
                 </div>
