--- a/wp-content/themes/marchebe/templates/index.html.twig
+++ b/wp-content/themes/marchebe/templates/index.html.twig
@@ -6,14 +6,15 @@
         </article>
     </div>
     <section class="mx-auto p-8 bg-blue-50">
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2" role="list">
+        <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2 list-none">
             {% for child in children %}
-                <a role="listitem"
-                   class="bg-white text-black-base p-4 rounded-md shadow-sm flex items-center justify-between transition-colors duration-300"
-                   href="{{ child.url }}"                >
-                    <span class="mr-2">{{ child.name }}</span>
-                </a>
+                <li>
+                    <a class="bg-white text-black-base p-4 rounded-md shadow-sm flex items-center justify-between transition-colors duration-300 block hover:bg-gray-50"
+                       href="{{ child.url }}">
+                        <span class="mr-2">{{ child.name }}</span>
+                    </a>
+                </li>
             {% endfor %}
-        </div>
+        </ul>
     </section>
 </div>
