--- a/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
@@ -68,7 +68,7 @@
                                   clip-rule="evenodd"/>
                         </svg>
                     </button>
-                    <h2 class="text-lg font-semibold" x-text="activeMobileCategoryData?.name"></h2>
+                    <h2 class="text-lg font-semibold" x-text="activeMobileCategoryData?.name ?? 'select a category'"></h2>
                 </div>
 
                 <ul class="p-4 space-y-1">
